--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
+    "tsparticles": "^3.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
