--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
+    "react-tsparticles": "^2.1.0",
     "react-typed": "^2.0.12",
-    "tsparticles": "^3.5.0",
+    "tsparticles": "^2.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
