--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "tailwindcss": "^3.4.9"
   }
 }
