--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "aos": "^2.3.4",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
@@ -19,7 +20,7 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.0",
     "react-typed": "^2.0.12",
-    "tsparticles": "^2.3.3",
+    "tsparticles": "^2.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
